Interfaz de numeroMagicos creada

--- a/numerosMagicos.html
+++ b/numerosMagicos.html
@@ -1,23 +1,31 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ejercicios DOM y BOM</title>
     <meta name="Keyword" content="ejercicios, DOM, BOM">
-    <script src="css/bootstrap.min.css"></script>
-    <script src="css/style.css"></script>
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
-    
-    <main>
-        <section>
-            
+
+    <main class="all-screen">
+        <section class="text-center">
+            <h3 class="text-light mb-4">Comenzar el juego</h3>
+            <button class="btn btn-outline-danger btn-lg">Comenzar</button>
+        </section>
+        <section class="d-none">
+            <input type="text" placeholder="Ingrese un numero">
+            <button class="btn btn-outline-danger btn-lg">Comenzar</button>
         </section>
     </main>
 
-    <script src="js/jquery-3.5.1.min.js"></script>
     <script src="js/popper.min.js"></script>
+    <script src="js/jquery-3.5.1.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
 </body>
+
 </html>
