--- a/index.html
+++ b/index.html
@@ -1,12 +1,22 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ejercicios DOM y BOM</title>
     <meta name="Keyword" content="ejercicios, DOM, BOM">
+    <script src="css/bootstrap.min.css"></script>
+    <script src="css/style.css"></script>
 </head>
+
 <body>
-    
+
+
+
+    <script src="js/jquery-3.5.1.min.js"></script>
+    <script src="js/popper.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
 </body>
+
 </html>
