--- a/numerosMagicos.html
+++ b/numerosMagicos.html
@@ -13,19 +13,23 @@
 <body>
 
     <main class="all-screen">
-        <section class="text-center">
+        <section class="text-center" id="interfaz-1">
             <h3 class="text-light mb-4">Comenzar el juego</h3>
-            <button class="btn btn-outline-danger btn-lg">Comenzar</button>
+            <button class="btn btn-outline-danger btn-lg" type="button" id="bComenzar" onclick="comenzar()">Comenzar</button>
         </section>
-        <section class="d-none">
-            <input type="text" placeholder="Ingrese un numero">
-            <button class="btn btn-outline-danger btn-lg">Comenzar</button>
+        <section class="d-none" id="interfaz-2">
+            <form class="form-group d-flex flex-column align-items-center">
+                <label class="h3 text-light">Intenta adivinar el numero del 1-10</label>
+                <input type="text" class="form-control my-3" id="iAdivinar" placeholder="Ingrese un numero">
+                <button class="btn btn-outline-danger btn-lg" type="button" id="bAdivinar" onclick="adivinar()">Adivinar</button>
+            </form>
         </section>
     </main>
 
     <script src="js/popper.min.js"></script>
     <script src="js/jquery-3.5.1.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
+    <script src="js/numerosMagicos.js"></script>
 </body>
 
 </html>
